@@ -1,0 +1,13 @@
+
+.*:     file format.*
+
+Disassembly of section .text:
+
+00008000 <[^>]*>:
+    8000:	e3080013 	movw	r0, #32787	; 0x8013
+    8004:	e3400000 	movt	r0, #0	; 0x0
+
+00008008 <[^>]*>:
+    8008:	f248 0013 	movw	r0, #32787	; 0x8013
+    800c:	f2c0 0000 	movt	r0, #0	; 0x0
+
